// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the closeSearch block in Header. If State isSearchPage = false, we check the closeSearch snapshot 1`] = `
<Headerstyled__HeaderContainer>
  <Headerstyled__Container>
    <SiteTitle
      isSearchPage={false}
    />
  </Headerstyled__Container>
  <Headerstyled__Container>
    <Memo(MovieInfo) />
  </Headerstyled__Container>
</Headerstyled__HeaderContainer>
`;

exports[`Testing the openSearch block in Header. If State isSearchPage = true, we check the openSearch snapshot 1`] = `
<Headerstyled__HeaderContainer>
  <Headerstyled__Container>
    <SiteTitle
      isSearchPage={true}
    />
  </Headerstyled__Container>
  <Headerstyled__Container>
    <SearchSection />
  </Headerstyled__Container>
</Headerstyled__HeaderContainer>
`;
